; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/game/extr_ai_vcmd.c_BotVoiceChat_FollowFlagCarrier.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/game/extr_ai_vcmd.c_BotVoiceChat_FollowFlagCarrier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @BotVoiceChat_FollowFlagCarrier(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @BotTeamFlagCarrier(i32* %8)
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = icmp sge i32 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %3
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @BotVoiceChat_FollowMe(i32* %13, i32 %14, i32 %15)
  br label %17

17:                                               ; preds = %12, %3
  ret void
}

declare dso_local i32 @BotTeamFlagCarrier(i32*) #1

declare dso_local i32 @BotVoiceChat_FollowMe(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
